--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,9 +1,2 @@
-spring.cloud.gateway.discovery.locator.enabled=true
 
-spring.cloud.gateway.routes[0].id=auth-service
-spring.cloud.gateway.routes[0].uri=lb://AUTH-SERVICE
-spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
-
-spring.cloud.gateway.routes[1].id=complaint-service
-spring.cloud.gateway.routes[1].uri=lb://COMPLAINT-SERVICE
-spring.cloud.gateway.routes[1].predicates[0]=Path=/complaints/**,/admin/**
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
