--- a/api-gateway/.gitignore
+++ b/api-gateway/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+**/application-dev.yml
+**/.env
+
 ### STS ###
 .apt_generated
 .classpath
