--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -36,6 +36,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+		<!-- Validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	<!-- Gateway -->
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
