--- a/complaint-service/src/main/resources/application.properties
+++ b/complaint-service/src/main/resources/application.properties
@@ -1,27 +1,2 @@
-server.port=8082
 
-# ===============================
-# Spring Application
-# ===============================
-spring.application.name=COMPLAINT-SERVICE
-
-# ===============================
-# MySQL Database
-# ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/complaints_db
-spring.datasource.username=root
-spring.datasource.password=harsh@936
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# ===============================
-# JPA / Hibernate
-# ===============================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.prefer-ip-address=true
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
