--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.application.name=SERVICE-REGISTRY
-server.port=8761
+#spring.application.name=SERVICE-REGISTRY
+#server.port=8761
+#
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+#
+## Optional but nice:
+#eureka.instance.hostname=localhost
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-
-# Optional but nice:
-eureka.instance.hostname=localhost
-
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
