--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<lombok.version>1.18.32</lombok.version>
 		<spring-cloud.version>2023.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
@@ -70,7 +71,8 @@
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
-		<optional>true</optional>
+		<version>${lombok.version}</version>
+		<scope>provided</scope>
 	</dependency>
 
 	<!-- Test -->
